kuber/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: trainer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shadaxxx/backend-trainer-portal
        ports:
        - containerPort: 3000
