kuber/backend_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: trainer-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
