kuber/frontend_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: trainer-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
